...
                            onLongClick = { menuExpanded = true },
                        ),
                ) {
                    Row(verticalAlignment = Alignment.Top) {
                        Box(Modifier.weight(1f)) { content() }
                        if (showMenuButton) IconButton(enabled = clickEnabled, onClick = { menuExpanded = true; offsetPx = 0f }) {
                            Icon(Icons.Outlined.MoreHoriz, "更多操作")
                        }
                    }
                }
        }

        DropdownMenu(
...
